# learn

./: .gitignore  Cargo.toml  go.mod  go.sum
chrome/: Cargo.toml
chrome/src/: main.rs
go/demo/: main.go  main_test.go
go/rabbitmq/: pubsub.go
golang/: .gitignore  go.mod  go.sum  go.work  go.work.sum
golang/asynq/: go.mod  go.sum
golang/call-c-cost-test/: Makefile  go.mod  main.go
golang/cgo/: go.mod  main.go
golang/coroutine/: go.mod  main.go
golang/craw-txt/: go.mod  go.sum  main.go
golang/demo/: demo_test.go  main.go
golang/expired_lock/: go.mod  lock.go  lock_test.go
golang/fx/: go.mod  go.sum  main.go
golang/go-zero/: .gitignore  README.md  go.mod  go.sum
golang/grpc/: go.mod  go.sum
golang/gui/: go.mod  go.sum  main.go
golang/hash-big-file/: go.mod  main.go
golang/image-info/: api.http  go.mod  go.sum  main.go
golang/interview/: go.mod
golang/local-ip/: go.mod  main.go
golang/mock/: go.mod  go.sum
golang/orm/: go.mod  go.sum  main.go
golang/parse_words/: main.go
golang/pipeline-manager/: api.http  env.dev  go.mod  go.sum
golang/prisma-go/: go.mod  go.sum  main.go
golang/rabbitmq/: error.go  go.mod  rabbitmq.go  simple.go
golang/read-big-file-end-100/: go.mod  main.go
golang/simple-user-web/: go.mod  go.sum  main.go  user.sql
golang/sqlc-demo/: go.mod  main.go  sqlc.yaml
golang/wire/: Makefile  go.mod  go.sum  main.go  wire.go  wire_gen.go
python/: api.py  async.py  demo.py  thread_pool.py
rust/call-c-cost-test/: Cargo.toml  Makefile  build.rs
rust/embed/: Cargo.toml
src/: lib.rs  main.rs
(+118 files in other folders)
