[package]
name = "chrome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromiumoxide = { version = "0.5.0", default-features = false, features = ["tokio-runtime"]}
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
